<resources>
    <string name="app_name">All News</string>
    <string name="all_news">All News</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="search">Search</string>
    <string name="top">Top</string>
    <string name="top_30">Top 30</string>
</resources>