<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_news"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="28sp"
        android:textColor="@color/my_primary"
        android:textStyle="bold"
        android:background="#3E756D"
        android:gravity="center"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/my_primary"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:id="@+id/progress_bar_id"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbarSize="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/top_30_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/top"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/sports_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sports"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/science_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/science"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/technology_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/technology"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/health_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/health"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/business_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/business"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <ListView
        android:id="@+id/list_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="5dp"
        tools:listitem="@layout/list_view_item" />

</LinearLayout>